fixed town data alignment in large view

--- a/lesson09/css/style.scss
+++ b/lesson09/css/style.scss
@@ -516,6 +516,10 @@ address {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include large {
+      justify-content: flex-start;
+    }
   }
 
   .img-container {
